--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -15,26 +15,6 @@
             $('#placeTagManHere').handleTag({
                 'formId': 'myForm'
             });
-            
-//            var termTemplate = "<span class='ui-autocomplete-term'>%s</span>";
-//            $('#search').autocomplete({
-//                source: ['java', 'javascript', 'asp.net'],
-//                open: function (e, ui) {
-//                    var acData = $(this).data('ui-autocomplete');
-//                    var styledTerm = termTemplate.replace('%s', acData.term);
-//
-//                    acData
-//                        .menu
-//                        .element
-//                        .find('li')
-//                        .each(function() {
-//                            var me = $(this);
-//                            var keywords = acData.term.split(' ').join('|');
-//                            me.html(me.text().replace(new RegExp("(" + keywords + ")", "gi"), styledTerm));
-//                        });
-//                }
-//            });
-            
         });
     </script>
 </head>
@@ -42,10 +22,10 @@
     .ui-autocomplete-term { font-weight: bold; color: blue; }
 </style>
 <body>
-    <input type="button" id="applyStringButton" value="submit" />
+<!--    <input type="button" id="applyStringButton" value="submit" />-->
 
     <form id="myForm">
-        <input type="hidden" id = "placeTagManHere">
+        <input type="hidden" id = "placeTagManHere" value="hidden">
 <!--
         <input type="text" id="testField" name="firstField" id="tagInput">
         <input type="text" name="secondfield" value="test">
