--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Tag manager</title>
-    <link rel="stylesheet" href="jquery/style.css"/>
-    <link rel="stylesheet" href="jquery/jquery-ui.css"/>
-    <link rel="stylesheet" href="jquery/jquery-ui.structure.css"/>
-    <link rel="stylesheet" href="jquery/jquery-ui.theme.css"/>
+    <link rel="stylesheet" href="styles/myTagStyle.css"/>
+    <link rel="stylesheet" href="styles/jquery-ui.css"/>
+    <link rel="stylesheet" href="styles/jquery-ui.structure.css"/>
+    <link rel="stylesheet" href="styles/jquery-ui.theme.css"/>
     <script type="text/javascript" src="jquery/jquery-2.1.3.js"></script>
     <script type="text/javascript" src="jquery/jquery-ui.js"></script>
     <script type="text/javascript" src="jquery/MyTags.js"></script>
@@ -19,9 +19,6 @@
         });
     </script>
 </head>
-<style>
-    .ui-autocomplete-term { font-weight: bold; color: blue; }
-</style>
 <body>
     <form id="myForm">
         <input type="hidden" id = "placeTagManHere" value="hidden">
