Fixed every last god damn problem with this plugin (i hope)
* Tags are now no longer applied if the suggestion window closes due to lack of suggestions
* Tags are applied when you click a selection
* The text is certain to be removed from the inputfield when a tag is applied
* You can have multiple tagfields in a single page, as long as you remember to set the uniqueId to something unique for every single tagfield
    * if you forget to set the uniqueId the plugin will complain to the console.

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,15 +12,16 @@
         $(function() {
             $('#placeTagManHere').handleTag({
                 'formId': 'myForm',
+                'uniqueInputFieldId': 'derp',
                 'tagLimit': 3,
                 source: ['Java', 'Javascript']
             });
             
-            $('#placeTagManTwoHere').handleTag({
-                'formId': 'myForm',
-                'tagLimit': 3,
-                source: ['Java', 'Javascript']
-            });
+//            $('#placeTagManTwoHere').handleTag({
+//                'formId': 'myForm',
+//                'tagLimit': 3,
+//                source: ['Java', 'Javascript']
+//            });
         });
     </script>
 </head>
