Fixed multiple problems arising from using two or more fields on the same page. That should now be possible without any problems (I hope) I still need to clear up the code so the user doesn't need to set 4 unique identifiers for each and every field just to make it work properly. But at least it works now.. (Cod I'm tired of saying that xD )

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -14,14 +14,21 @@
                 'formId': 'myForm',
                 'uniqueInputFieldId': 'derp',
                 'tagLimit': 3,
+                'tagDelClass': 'tagOne',
+                'tagClass': 'tagClassOne',
+                'insertTagsId': 'insertOne',
                 source: ['Java', 'Javascript']
             });
             
-//            $('#placeTagManTwoHere').handleTag({
-//                'formId': 'myForm',
-//                'tagLimit': 3,
-//                source: ['Java', 'Javascript']
-//            });
+            $('#placeTagManTwoHere').handleTag({
+                'formId': 'myForm',
+                'uniqueInputFieldId': 'derpty',
+                'tagLimit': 3,
+                'tagDelClass': 'tagTwo',
+                'tagClass': 'tagClassTwo',
+                'insertTagsId': 'insertTwo',
+                source: ['Java', 'Javascript']
+            });
         });
     </script>
 </head>
