Fixed loads of tiny bugs, and I also cleaned my code making it more useable.

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,21 +12,21 @@
         $(function() {
             $('#placeTagManHere').handleTag({
                 'formId': 'myForm',
-                'uniqueInputFieldId': 'derp',
+                'uniqueIdentifier': 'derp',
                 'tagLimit': 3,
-                'tagDelClass': 'tagOne',
-                'tagClass': 'tagClassOne',
-                'insertTagsId': 'insertOne',
+//                'tagDelClass': 'tagOne',
+//                'tagClass': 'tagClassOne',
+//                'insertTagsId': 'insertOne',
                 source: ['Java', 'Javascript']
             });
             
             $('#placeTagManTwoHere').handleTag({
                 'formId': 'myForm',
-                'uniqueInputFieldId': 'derpty',
+                'uniqueIdentifier': 'derpty',
                 'tagLimit': 3,
-                'tagDelClass': 'tagTwo',
-                'tagClass': 'tagClassTwo',
-                'insertTagsId': 'insertTwo',
+//                'tagDelClass': 'tagTwo',
+//                'tagClass': 'tagClassTwo',
+//                'insertTagsId': 'insertTwo',
                 source: ['Java', 'Javascript']
             });
         });
