Added the ability to instantiate the field with preset tags

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,8 @@
                 'formId': 'myForm',
                 'uniqueIdentifier': 'derptys',
                 'tagLimit': 1,
-                source: ['Java', 'Javascript']
+                source: ['Java', 'Javascript'],
+                presetValues: "abe, gris" //limit it to max amount
             });
         });
     </script>
